--- a/RatingCenter/MvcCore/Views/Films/Details.cshtml
+++ b/RatingCenter/MvcCore/Views/Films/Details.cshtml
@@ -58,16 +58,18 @@
     <table class="table">
         <thead>
             <tr>
-                <th>
-                    Nickname
+                <th class="col-md-3">
+                    @Html.DisplayNameFor(model => model.Ratings.FirstOrDefault().Nickname)
                 </th>
-                <th>
-                    Rating
+                <th class="col-md-2">
+                    @Html.DisplayNameFor(model => model.Ratings.FirstOrDefault().Rating)
                 </th>
-                <th>
-                    Description
+                <th class="col-md-5">
+                    @Html.DisplayNameFor(model => model.Ratings.FirstOrDefault().Description)
                 </th>
-                <th></th>
+                <th class="col-md-3">
+                    @Html.DisplayNameFor(model => model.Ratings.FirstOrDefault().CreatedOn)
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -82,6 +84,9 @@
                     </td>
                     <td>
                         @rating.Description
+                    </td>
+                    <td>
+                        @rating.CreatedOn
                     </td>
                 </tr>
             }
