--- a/RatingCenter/MvcCore/Views/Shared/_FilmRating.cshtml
+++ b/RatingCenter/MvcCore/Views/Shared/_FilmRating.cshtml
@@ -2,24 +2,24 @@
 
 <h4>Add your rating</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div>
+    <div class="col-md-12">
         <form asp-action="RateFilm">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="FilmId" value="@Model.FilmId"/>
             <div class="form-group">
                 <label asp-for="Nickname" class="control-label"></label>
-                <input asp-for="Nickname" class="form-control" />
+                <input asp-for="Nickname" class="form-control col-md-4" />
                 <span asp-validation-for="Nickname" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
-                <select asp-for="Rating" asp-items="@Model.AllowedRatings" class="form-control"></select>
+                <select asp-for="Rating" asp-items="@Model.AllowedRatings" class="form-control col-md-1"></select>
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
             <div class="form-group">
