Extracted business logic to separate project.

--- a/RatingCenter/MvcCore/Views/Shared/_FilmRating.cshtml
+++ b/RatingCenter/MvcCore/Views/Shared/_FilmRating.cshtml
@@ -6,7 +6,7 @@
     <div class="col-md-12">
         <form asp-action="RateFilm">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="FilmId" value="@Model.FilmId"/>
+            <input type="hidden" asp-for="ExternalId" value="@Model.ExternalId"/>
             <div class="form-group">
                 <label asp-for="Nickname" class="control-label"></label>
                 <input asp-for="Nickname" class="form-control col-md-4" />
