--- a/RatingCenter/MvcCore/Views/Shared/_FilmRating.cshtml
+++ b/RatingCenter/MvcCore/Views/Shared/_FilmRating.cshtml
@@ -4,7 +4,7 @@
 <hr />
 <div>
     <div class="col-md-12">
-        <form asp-action="RateFilm">
+        <form asp-controller="Films" asp-action="RateFilm">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ExternalId" value="@Model.ExternalId"/>
             <div class="form-group">
