--- a/RatingCenter/MvcCore/Client/src/app/components/list/list.component.html
+++ b/RatingCenter/MvcCore/Client/src/app/components/list/list.component.html
@@ -1,1 +1,32 @@
-<p>list works!</p>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <ng-container matColumnDef="externalId">
+    <th mat-header-cell *matHeaderCellDef> Id </th>
+    <td mat-cell *matCellDef="let element"> {{element.externalId}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="episodeId">
+    <th mat-header-cell *matHeaderCellDef> Episode Id </th>
+    <td mat-cell *matCellDef="let element"> {{element.episodeId}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="title">
+    <th mat-header-cell *matHeaderCellDef> Title </th>
+    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="releaseDate">
+    <th mat-header-cell *matHeaderCellDef> Released </th>
+    <td mat-cell *matCellDef="let element"> {{element.releaseDate}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="details">
+    <th mat-header-cell *matHeaderCellDef> Details </th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-button (click)="showDetails(element)" color="primary">Details</button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
